--- a/app/src/main/assets/common.css
+++ b/app/src/main/assets/common.css
@@ -22,6 +22,11 @@ a {
     -webkit-user-drag: none;
 }
 
+main {
+    height: 100%;
+    width: 100%;
+}
+
 /* Navbar */
 
 .bottom-nav {
@@ -41,7 +46,7 @@ a {
     background-color: #fff;
     width: 100%;
     height: 100%;
-    outline: 1px solid #eee;
+    border-top: 1px solid #eee;
     display: flex;
     justify-content: center;
     align-items: center;
