--- a/app/src/main/assets/index.css
+++ b/app/src/main/assets/index.css
@@ -1,7 +1,6 @@
 /* Meal Plans */
 
 main {
-    height: 100%;
     display: flex;
     background-color: #fff;
     justify-content: flex-start;
@@ -19,6 +18,7 @@ main {
     background-color: #eee;
     border-radius: 1em;
     font-size: 1em;
+    padding: 0.5em 1em;
 }
 
 .meal-plan {
@@ -31,6 +31,7 @@ main {
     width: 90%;
     background-color: #eee;
     border-radius: 1em;
+    padding: 0.5em 1em;
 }
 
 .meal-plan h3 {
@@ -47,6 +48,7 @@ main {
 .nutrition {
     margin: 1em 0.5em 0 0.5em;
     font-size: 0.75em;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -54,12 +56,16 @@ main {
 }
 
 .nutritional {
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .circle {
-    height: 1em;
+    margin-right: 0.5em;
     width: 1em;
+    height: 1em;
     border-radius: 50%;
-    color: red;
+    background-color: var(--color);
 }
