--- a/app/src/main/assets/common.css
+++ b/app/src/main/assets/common.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    user-select: none;
 }
 
 body {
@@ -24,12 +25,16 @@ a {
 
 main {
     height: 100%;
+    padding-bottom: 10vh;
+    background-color: #fff;
+    overflow: scroll;
     width: 100%;
 }
 
 /* Navbar */
 
 .bottom-nav {
+    background-color: transparent;
     position: fixed;
     bottom: 0;
     left: 0;
