--- a/app/src/main/assets/common.css
+++ b/app/src/main/assets/common.css
@@ -7,6 +7,9 @@
     padding: 0;
     box-sizing: border-box;
     user-select: none;
+    outline: 0;
+    border: 0;
+    -webkit-tap-highlight-color: transparent;
 }
 
 body {
