--- a/app/src/main/assets/settings.css
+++ b/app/src/main/assets/settings.css
@@ -1,3 +1,17 @@
+input {
+    border: 1px solid black;
+    outline: none;
+    height: 1em;
+}
+
+button {
+    height: 3em;
+    width: 6em;
+    border-radius: 1.5em;
+}
+
+/* Toggle Switch */
+
 .switch {
     position: relative;
     display: inline-block;
@@ -52,4 +66,41 @@
 
 .slider.round:before {
     border-radius: 50%;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input {
+    margin: 0.5em;
+    width: 90%;
+    border: none;
+    outline: 1px solid #eee;
+}
+
+input:focus, input:hover {
+    outline: 2px solid #ccc;
+}
+
+.inputs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 80%;
+    flex-grow: 1;
+}
+
+.divider {
+    width: 100%;
+    height: 1px;
+    background-color: #eee;
+    margin: 1em 0;
+}
+
+h1 {
+    margin-top: 1em;
 }
