--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     tools:context=".MainActivity">
 
     <WebView
-        android:id="@+id/webview"
+        android:overScrollMode="never"
+        android:id="@+id/WebView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
