--- a/app/src/main/assets/settings.css
+++ b/app/src/main/assets/settings.css
@@ -68,10 +68,11 @@ button {
     border-radius: 50%;
 }
 
-main {
+form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
 }
 
 input {
