--- a/app/src/main/assets/settings.css
+++ b/app/src/main/assets/settings.css
@@ -68,11 +68,19 @@ button {
     border-radius: 50%;
 }
 
+/* Other Inputs */
+
 form {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100%;
+}
+
+@media screen and (orientation: landscape) {
+    form {
+        height: auto;
+    }
 }
 
 input {
