--- a/app/src/main/assets/calculator.css
+++ b/app/src/main/assets/calculator.css
@@ -1,10 +1,9 @@
 h1 {
     font-size: 1.5em;
     font-weight: bold;
-    text-align: center;
+    text-align: left;
     margin: 1em 0;
     padding: 0;
-    text-align: center;
 }
 
 img {
@@ -15,20 +14,25 @@ img {
 section {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .bmr ul {
-    list-style: none;
+    list-style: disc;
+    list-style-position: inside;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .bmr li {
-    margin: 0.5em 0;
+    margin: 1em 1em;
+}
+
+main {
+    margin: 1.5em;
 }
