--- a/app/src/main/assets/settings.css
+++ b/app/src/main/assets/settings.css
@@ -6,7 +6,7 @@ input {
 
 button {
     height: 3em;
-    width: 6em;
+    width: 8em;
     border-radius: 1.5em;
 }
 
@@ -85,13 +85,17 @@ form {
 
 input {
     margin: 0.5em;
-    width: 90%;
+    width: 60%;
     border: none;
-    outline: 1px solid #eee;
+    outline: 2px solid #eee;
+    text-align: right;
+    font-size: 1.25em;
+    border-radius: 0.75em;
+    padding: 0.75em;
 }
 
-input:focus, input:hover {
-    outline: 2px solid #ccc;
+input:focus {
+    outline: 3px solid #ccc;
 }
 
 .inputs {
