Fixed Activity Level In Calculator Finished Styles For Create A Meal Plan Started Adding Allergens On Food Started On Implementing The Meal Plan Calculation: - Checks If Meal Are Valid Based On Allergens - TODO:   - Generate Permutations Of Those Meals   - Generate Their Accuracy Score Based On Desired Stats   - Order Them Based On That Score

--- a/app/src/main/assets/index.css
+++ b/app/src/main/assets/index.css
@@ -166,9 +166,16 @@ main {
 }
 
 .modal-content-create-plan ul {
-    list-style-position: inside;
     list-style-type: none;
     margin: 1em 0;
+}
+
+.modal-content-create-plan .stat-list {
+    text-align: center;
+}
+
+.modal-content-create-plan .stat-list li {
+    font-size: 1.5em;
 }
 
 .modal-content-create-plan li {
@@ -188,6 +195,11 @@ main {
     text-align: center;
     margin: 1em 0;
     display: block;
+}
+
+.stat {
+    display: block;
+    font-size: 0.75em;
 }
 
 @media screen and (orientation:landscape) {
