--- a/app/src/main/assets/index.css
+++ b/app/src/main/assets/index.css
@@ -151,13 +151,49 @@ main {
     align-self: center;
 }
 
-.input-number:focus, .input-number:hover {
+.input-number:focus {
     outline: 3px solid #ccc;
+}
+
+.input-text {
+    margin: 1em;
+    width: 60%;
+    border: none;
+    outline: 2px solid #eee;
+    text-align: center;
+    font-size: 1em;
+    border-radius: 0.75em;
+    padding: 0.25em;
+    align-self: center;
+}
+
+.input-text:focus {
+    outline: 3px solid #ccc;
+}
+
+.modal-content-create-plan .buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 50%;
+    justify-self: flex-end;
+}
+
+.modal-content-create-plan .meal-plan {
+    align-self: center;
 }
 
 .modal-content-create-plan h2 {
     margin-bottom: 1em;
     text-align: center;
+}
+
+.modal-content-create-plan form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-content-create-plan h3 {
@@ -167,6 +203,7 @@ main {
 
 .modal-content-create-plan ul {
     list-style-type: none;
+    align-self: left;
     margin: 1em 0;
 }
 
